# ces-twilio-adapter

./: .dockerignore  .example.env  .flake8  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LINTING.md  README.md  escalation_handler.py  main.py  message_handler.py  number_mappings.json.example  phone_number_mapping.py  pyproject.toml  requirements.txt  secrets_utils.py  twilio_utils.py
script/: deploy.sh  setup-cloud-shell.sh  values.sh.example
